[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.8.1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
clap = "2.34.0"
dbus = "0.9"
git2 = "0.18.1"
ctrlc = "3.4"